workspace = { members = ["example"] }
[package]
name = "retro_ab_av"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
retro_ab = { git = "https://github.com/Xsimple1010/retro_ab_rs.git" }
rodio = "0.17.3"
vulkano = "0.34.1"

[profile.dev]
opt-level = 1

[[example]]
name = "example"
path = "example/src/main.rs"
