workspace = { members = ["example"] }
[package]
name = "retro_ab_av"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
retro_ab = { git = "https://github.com/Xsimple1010/retro_ab_rs.git" }
rodio = "0.18.1"
sdl2 = "0.37.0"

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.1.1"


[[example]]
name = "example"
path = "example/src/main.rs"
